Fix layout problems
Fix: long dir qT may cause overflow-x.

--- a/view/layout.sass
+++ b/view/layout.sass
@@ -75,15 +75,14 @@ body
           box-shadow: 0 2px 2px rgba(black, 0.3)
           z-index: 10
       > .filepreview
-        flex-grow: 3
-        flex-shrink: 0
+        flex-grow: 1
+        flex-shrink: 1
         border-left: solid 2px $color-primary
     > .viewcontain.sidepane
       > .view
         flex-grow: 0
-        flex-shrink: 1
-        flex-basis: 500px
-        max-width: 500px
+        flex-shrink: 0
+        width: 500px
 
 .contentblackcover
   z-index: 2
